[metadata]
name = Finance Tracker
description = A simple app for tracking expenses and income across multiple wallets and currencies.
author = A-Rave-Mistake
license = MIT
readme = README
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    Topic :: Office/Business :: Financial

[options]
packages =
    FTracker
install_requires =
    customtkinter>=5.0.3,<6.0
    darkdetect>=0.8.0,<1.0
    Pillow>=9.4.0,<10.0
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.2.1